--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fb-comment-bot",
+  "name": "interactive-video-bot",
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/buzzfeed-openlab/fb-comment-bot.git"
+    "url": "git+https://github.com/buzzfeed-openlab/interactive-video-bot.git"
   },
   "author": "Westley Argentum Hennigh-Palermo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/buzzfeed-openlab/fb-comment-bot/issues"
+    "url": "https://github.com/buzzfeed-openlab/interactive-video-bot/issues"
   },
-  "homepage": "https://github.com/buzzfeed-openlab/fb-comment-bot#readme",
+  "homepage": "https://github.com/buzzfeed-openlab/interactive-video-bot#readme",
   "dependencies": {
     "particle-api-js": "^5.2.6",
     "request": "^2.71.0"
